tdf#166525 CEOO: Back to overpaint everything

Change-Id: Ia39331001a6759d27e938602b1fc5d8da2e90ada
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185971
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
Tested-by: Jenkins